最低限の状態まで持っていきました。

--- a/tetris_custom.html
+++ b/tetris_custom.html
@@ -36,14 +36,27 @@
 
         <br>
 
-        <div id="tetriminoDraw" class="position-center test"></div>
+        <div id="playingState">再生中</div>
+
+        <br>
+
+        <div class="tetris">
+            <div id="tetriminoDraw"></div>
+            <div id="tetriminoScore">
+                <div id="nextBlockViewer"></div>
+            </div>
+        </div>
 
         <div id="buttons" class="position-center test">
+            <input type="button" id="playing" value="⏯">
             <input type="button" id="rotate" value="🔁">
             <input type="button" id="left" value="←">
             <input type="button" id="up" value="↑">
             <input type="button" id="right" value="→">
             <input type="button" id="down" value="↓">
+        </div>
+
+        <div class="background" style="background: #0a53be; margin-left: 1000em;">
         </div>
 
         hoge huga<br>
