--- a/tetris_custom.html
+++ b/tetris_custom.html
@@ -32,7 +32,37 @@
     <body>
         <h1>README</h1>
         <p>テトリスのようなゲームです。</p>
-        <p>操作方法は、上下左右のボタンを押すか、キーボードの矢印キーを押してください。</p>
+        <h1>操作方法</h1>
+        <table>
+            <tr>
+                <th>キー</th>
+                <th>操作</th>
+            </tr>
+            <tr>
+                <td>A/←</td>
+                <td class="text-align-left">左移動</td>
+            </tr>
+            <tr>
+                <td>D/→</td>
+                <td class="text-align-left">右移動</td>
+            </tr>
+            <tr>
+                <td>S/↓</td>
+                <td class="text-align-left">ソフトドロップ</td>
+            </tr>
+            <tr>
+                <td>W/Space</td>
+                <td class="text-align-left">ハードドロップ</td>
+            </tr>
+            <tr>
+                <td>Q/Z</td>
+                <td class="text-align-left">左回転</td>
+            </tr>
+            <tr>
+                <td>E/↑</td>
+                <td class="text-align-left">右回転</td>
+            </tr>
+        </table>
 
         <br>
 
