スコア表示を実装

--- a/tetris_custom.html
+++ b/tetris_custom.html
@@ -74,6 +74,12 @@
             <div id="tetriminoDraw"></div>
             <div id="tetriminoScore">
                 <div id="nextBlockViewer"></div>
+                <div class="scoreTitle gbFont">SCORE</div>
+                <div id="score" class="gbFont">0</div>
+                <div class="levelTitle gbFont">LEVEL</div>
+                <div id="level" class="gbFont">1</div>
+                <div class="linesTitle gbFont">LINES</div>
+                <div id="lines" class="gbFont">0</div>
             </div>
         </div>
 
