冗長なクラスの使用を削減

--- a/tetris_custom.html
+++ b/tetris_custom.html
@@ -83,7 +83,7 @@
             </div>
         </div>
 
-        <div id="buttons" class="position-center test">
+        <div id="buttons">
             <input type="button" id="playing" value="⏯">
             <input type="button" id="rotate" value="🔁">
             <input type="button" id="left" value="←">
