--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
 
-    <meta name="theme-color" content="#fafafa">\
+    <meta name="theme-color" content="#fafafa">
   </head>
   <body>
     <!-- Add your site or application content here -->
     <p>Hello world! This is HTML5 Boilerplate.</p>
+
+    <a href="tetris_custom.html">Tetris Beta</a>
 
     <script src="js/vendor/modernizr-3.11.2.min.js"></script>
     <script src="js/plugins.js"></script>
