--- a/index.html
+++ b/index.html
@@ -1,33 +1,94 @@
+<!--
+  ~ Copyright (c) 2023 wayamoti2015@waya0125 All Rights Reserved.
+  ~ Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the “Software”), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
+  ~ The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
+  ~ THE SOFTWARE IS PROVIDED “AS IS”, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+  -->
+
 <!doctype html>
-<html class="no-js" lang="">
-  <head>
-    <meta charset="utf-8">
-    <title>index</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<html class="no-js" lang="ja">
+    <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#">
+        <meta charset="utf-8">
+        <title>Tetris Beta</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <meta property="og:title" content="">
-    <meta property="og:type" content="">
-    <meta property="og:url" content="">
-    <meta property="og:image" content="">
+        <meta property="og:title" content="">
+        <meta property="og:type" content="">
+        <meta property="og:url" content="">
+        <meta property="og:image" content="">
 
-    <link rel="manifest" href="site.webmanifest">
-    <link rel="apple-touch-icon" href="icon.png">
-    <!-- Place favicon.ico in the root directory -->
+        <!-- Place favicon.ico in the root directory -->
 
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/tetris_modoki.css">
 
-    <meta name="theme-color" content="#fafafa">
-  </head>
-  <body>
-    <!-- Add your site or application content here -->
-    <p>Hello world! This is HTML5 Boilerplate.</p>
+        <meta name="theme-color" content="#fafafa">
+        <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
+    </head>
+    <body>
+    <h1>README</h1>
+    <p>テトリスのようなゲームです。</p>
+    <p>※ 最初のブロックだけ表示されません。※</p>
+    <h1>操作方法</h1>
+    <table>
+        <tr>
+            <th>キー</th>
+            <th>操作</th>
+        </tr>
+        <tr>
+            <td>A/←</td>
+            <td class="text-align-left">左移動</td>
+        </tr>
+        <tr>
+            <td>D/→</td>
+            <td class="text-align-left">右移動</td>
+        </tr>
+        <tr>
+            <td>S/↓</td>
+            <td class="text-align-left">ソフトドロップ</td>
+        </tr>
+        <tr>
+            <td>W/Space</td>
+            <td class="text-align-left">ハードドロップ</td>
+        </tr>
+        <tr>
+            <td>Q/Z</td>
+            <td class="text-align-left">左回転</td>
+        </tr>
+        <tr>
+            <td>E/↑</td>
+            <td class="text-align-left">右回転</td>
+        </tr>
+    </table>
 
-    <a href="tetris_custom.html">Tetris Beta</a>
+    <br>
 
-    <script src="js/vendor/modernizr-3.11.2.min.js"></script>
-    <script src="js/plugins.js"></script>
-    <script src="js/main.js"></script>
-  </body>
+    <h2><div id="playingState">停止中</div></h2>
+
+    <br>
+
+    <div class="tetris resize">
+        <div id="tetriminoDraw"></div>
+        <div id="tetriminoScore">
+            <div class="scoreTitle gbFont">SCORE</div>
+            <div id="score" class="gbFont">0</div>
+            <div class="levelTitle gbFont">LEVEL</div>
+            <div id="level" class="gbFont">1</div>
+            <div class="linesTitle gbFont">LINES</div>
+            <div id="lines" class="gbFont">0</div>
+            <div id="nextBlockViewer"></div>
+        </div>
+    </div>
+
+    <div id="buttons">
+        <input type="button" id="playing" value="⏯">
+        <input type="button" id="rotate" value="🔁">
+        <input type="button" id="left" value="←">
+        <input type="button" id="up" value="↑">
+        <input type="button" id="right" value="→">
+        <input type="button" id="down" value="↓">
+    </div>
+
+    <script src="js/tetris_modoki/main.js"></script>
+    </body>
 </html>
