絵文字専用フォントを用いるように変更

--- a/index.html
+++ b/index.html
@@ -82,12 +82,12 @@
     </div>
 
     <div id="buttons">
-        <input type="button" id="playing" value="⏯">
-        <input type="button" id="rotate" value="🔁">
-        <input type="button" id="left" value="←">
-        <input type="button" id="up" value="↑">
-        <input type="button" id="right" value="→">
-        <input type="button" id="down" value="↓">
+        <input type="button" class="emojiFont" id="playing" value="⏯">
+        <input type="button" class="emojiFont" id="rotate" value="🔁">
+        <input type="button" class="emojiFont" id="left" value="←">
+        <input type="button" class="emojiFont" id="up" value="↑">
+        <input type="button" class="emojiFont" id="right" value="→">
+        <input type="button" class="emojiFont" id="down" value="↓">
     </div>
 
     <script src="js/tetris_modoki/main.js"></script>
