--- a/index.html
+++ b/index.html
@@ -13,10 +13,8 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <meta property="og:title" content="">
-        <meta property="og:type" content="">
-        <meta property="og:url" content="">
-        <meta property="og:image" content="">
+        <!-- Favicon -->
+        <link rel="shortcut icon" href="img/ico/favicon.ico">
 
         <!-- Place favicon.ico in the root directory -->
 
