--- a/index.html
+++ b/index.html
@@ -8,16 +8,26 @@
 <!doctype html>
 <html class="no-js" lang="ja">
     <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#">
+        <!-- HTML Setting -->
         <meta charset="utf-8">
-        <title>Tetris Beta</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="robots" content="noindex, nofollow">
 
         <!-- Favicon -->
         <link rel="shortcut icon" href="img/ico/favicon.ico">
 
-        <!-- Place favicon.ico in the root directory -->
+        <!-- Title 概要設定 -->
+        <title>Tetris modoki</title>
+        <meta name="description" content="テトリスもどきです。">
+        <meta property="og:type" content="article">
+        <meta property="og:locale" content="ja_JP">
+        <meta name="theme-color" content="#158181">
+        <meta name="twitter:card" content="summary">
+        <meta name="twitter:site" content="@wayamoti2015">
+        <meta name="twitter:creator" content="@wayamoti2015">
+        <meta property="og:image" content="img/png/GameBoyModoki.png">
+        <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
 
+        <!-- CSS -->
         <link rel="stylesheet" href="css/tetris_modoki.css">
 
         <meta name="theme-color" content="#fafafa">
