ESC (Escape)キーで一時停止ができるように改良

--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
                 <td>E/↑</td>
                 <td class="text-align-left">右回転</td>
             </tr>
+            <tr>
+                <td>ESC</td>
+                <td class="text-align-left">一時停止</td>
+            </tr>
         </table>
 
         <br>
