コメントの追記

--- a/index.html
+++ b/index.html
@@ -74,9 +74,11 @@
         <br>
 
         <h2><div id="playingState">停止中</div></h2>
+        <!-- ステータス表示 -->
 
         <br>
 
+        <!-- テトリミノ表示 -->
         <div class="tetris">
             <div id="tetriminoDraw"></div>
             <div id="tetriminoScore">
@@ -90,6 +92,7 @@
             </div>
         </div>
 
+        <!-- テトリミノ操作ボタン (スマホ用) -->
         <div id="buttons">
             <input type="button" class="emojiFont" id="playing" value="⏯">
             <input type="button" class="emojiFont" id="rotate" value="🔁">
