ステータス表示の書き方を調整

--- a/index.html
+++ b/index.html
@@ -73,8 +73,9 @@
 
         <br>
 
-        <h2><div id="playingState">停止中</div></h2>
         <!-- ステータス表示 -->
+        <h2>ゲームの状態</h2>
+        <div id="playingState">停止中</div>
 
         <br>
 
