jsファイルの移動に伴う階層書き換え

--- a/index.html
+++ b/index.html
@@ -104,6 +104,6 @@
             <input type="button" class="emojiFont" id="down" value="↓">
         </div>
 
-        <script src="js/tetris_modoki/main.js"></script>
+        <script src="js/main.js"></script>
     </body>
 </html>
