説明書を反映させていなかったため反映。

--- a/README.html
+++ b/README.html
@@ -85,21 +85,26 @@
         <br>
 
         <h2>注意点</h2>
-        <p>このゲームはTHE TETRIS COMPANY, LLCからの承諾を得ておりません</p>
-        <p>また、このゲームはテトリスの著作権の侵害を助長するものではありません</p>
+        <p>このゲームはTHE TETRIS COMPANY, LLC及び任天堂株式会社からの承諾を得ておりません</p>
+        <p>また、このゲーム作品はテトリスの著作権の侵害を助長するものではありません</p>
+        <p>このゲーム作品ではどこまで原作を再現できるかという点に重点を置いております</p>
+        <p>なおこの作品は承諾を得ていない関係上、著作権を保有する上記企業からの要請により公開を停止する可能性があります</p>
+        <p>予めご了承ください</p>
 
         <br>
 
         <h2>著作権について</h2>
-        <p>音声・ゲーム（システムアルゴリズム・設計等を除く）の基礎は<a href="https://tetris.com/terms-of-service">THE TETRIS COMPANY, LLC</a>の著作物です</p>
-        <p>ゲームアルゴリズム・システムUIの基礎設計は<a href="https://github.com/ophum/tetris">ophum</a>氏の作品を用いて作成しています</p>
-        <p>ゲームシステム・システムUIの改良部分・画像テクスチャ作成等は原作を参考にした上で<a href="https://misskey.io/@waya">wayamoti2015@waya0125</a>が作成しています</p>
+        <p>テトリス (Tetris) は<a href="https://tetris.com/terms-of-service">THE TETRIS COMPANY, LLC</a>の著作物及び登録商標です</p>
+        <p>そのうちの一部コンテンツは<a href="https://www.nintendo.co.jp/networkservice_guideline/ja/">任天堂株式会社</a>の著作物です</p>
+        <p>ゲームアルゴリズム・システムUIの基礎設計は<a href="https://github.com/ophum/">ophum</a>氏の<a href="https://github.com/ophum/tetris">作品</a>を用いて作成しています</p>
+        <p>ゲームシステム・システムUIの改良部分・画像テクスチャ作成等はゲームボーイ版を参考にした上で<a href="https://misskey.io/@waya">wayamoti2015@waya0125</a>が作成しています</p>
 
         <br>
 
         <h2>ライセンス</h2>
         <p>このゲームは<a href="https://raw.githubusercontent.com/project-wayamoti/WebTetris/main/LICENSE">MITライセンス</a>のもとで公開されています</p>
-        <p>コード・音源・画像テクスチャ等を利用する場合には自己責任での利用をお願いします</p>
+        <p>私が書いたコード・<a href="https://github.com/ophum/">ophum</a>氏が書いたコードはMIT Licenseの元で提供されます。</p>
+        <p>ただし、音源・画像テクスチャ等を利用する場合には自己責任での利用をお願いします</p>
 
         <br>
 
